# cppwatch

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: event.rs  filters.rs  main.rs  reporter.rs  watcher.rs
